Add eating and death
- Added eating and growing functionality
- Refactored some of the game logic into Snake.cpp
- Added scores and high scores (not persistent)
- Added dying with a death screen and option to restart

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
 
 # Define library with game files
 ADD_LIBRARY( SnakeLibModule
-   Snake.cpp
+   Snake.cpp Utility.cpp
 )
 
 # Find and link raylib
